Doesn't compile with recent OpenVDB #54457

Closed
opened 2018-03-29 01:36:12 +02:00 by Sven-Hendrik Haase · 6 comments

Compiling this with a recent version of OpenVDB fails (for instance with major v4 or v5). This is because of this line in intern/openvdb/intern/openvdb_writer.cc:

#if (OPENVDB_LIBRARY_MAJOR_VERSION_NUMBER == 3) which checks for the exact version. It should instead check for >=. You can then compile OpenVDB 5 against Blender when specifying export CXXFLAGS="-DOPENVDB_3_ABI_COMPATIBLE".

Compiling this with a recent version of OpenVDB fails (for instance with major v4 or v5). This is because of this line in `intern/openvdb/intern/openvdb_writer.cc`: `#if (OPENVDB_LIBRARY_MAJOR_VERSION_NUMBER == 3)` which checks for the exact version. It should instead check for `>=`. You can then compile OpenVDB 5 against Blender when specifying `export CXXFLAGS="-DOPENVDB_3_ABI_COMPATIBLE"`.

Added subscriber: @svenstaro

Added subscriber: @svenstaro

This issue was referenced by ca5f3dd220

This issue was referenced by ca5f3dd2200725712a665705fc25e20a208d6295

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for pointing to the solution, should be fixed now.

Thanks for pointing to the solution, should be fixed now.

I had to change the fix since it wasn't quite correct. The version test was supposed to be <=, not >=. Since Debian appears to compile without ABI compatibility we can't make it work automatic for all distributions, so I've added a WITH_OPENVDB_3_ABI_COMPATIBLE option that you can enable on Arch.

I had to change the fix since it wasn't quite correct. The version test was supposed to be <=, not >=. Since Debian appears to compile without ABI compatibility we can't make it work automatic for all distributions, so I've added a `WITH_OPENVDB_3_ABI_COMPATIBLE` option that you can enable on Arch.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54457
No description provided.