Fix T54457: build error with OpenVDB versions newer than 3.

Solution provided by Sven-Hendrik Haase.